modules/noosphere/taghmata/nixidy/manifests/prod/ncps/Namespace-ncps.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: ncps
