modules/noosphere/taghmata/nixidy/manifests/prod/ncps/Service-ncps.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ncps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ncps
    app.kubernetes.io/version: v0.10.0-rc18
    helm.sh/chart: ncps-v0.10.0-rc18
  name: ncps
  namespace: ncps
spec:
  ports:
    - name: http
      port: 8501
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: ncps
    app.kubernetes.io/name: ncps
  sessionAffinity: None
  type: ClusterIP
